kubernetes/apps/flux-system/flux-instance/app/httpRoute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
spec:
  hostnames: ["flux-webhook.rphilipsen.nl"]
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - matches:
      - path:
          value: /hook/
    - backendRefs:
        - name: webhook-receiver
          port: 80
